[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Menu/DiabloHeavy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu/Singleplayer.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Menu/DiabloLight.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="Singleplayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer_label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Singleplayer
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer_new_game" type="Button" parent="."]
margin_left = 810.0
margin_top = 360.0
margin_right = 1110.0
margin_bottom = 390.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer_load_game" type="Button" parent="."]
margin_left = 811.498
margin_top = 501.498
margin_right = 1111.5
margin_bottom = 531.498
custom_fonts/font = SubResource( 3 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Singleplayer_back" type="Button" parent="."]
margin_left = 810.0
margin_top = 640.0
margin_right = 1110.0
margin_bottom = 670.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
